<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/server_basic_settings">
        <EditTextPreference
        app:icon="@drawable/ic_action_description"
            app:key="profileName"
            app:title="@string/profile_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_grid_3x3_24"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="2"
            app:entries="@array/socks_versions"
            app:entryValues="@array/int_array_3"
            app:icon="@drawable/ic_baseline_nfc_24"
            app:key="serverProtocol"
            app:title="@string/socks_version"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_person_24"
            app:key="serverUsername"
            app:title="@string/username_opt"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="serverPassword"
            app:title="@string/password_opt" />
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_baseline_tune_24"
            app:key="showAdvancedSocksSettings"
            app:persistent="false"
            app:summary="@string/show_advanced_profile_settings_summary"
            app:title="@string/show_advanced_profile_settings" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="socksAdvancedCategory"
        app:title="@string/show_advanced_profile_settings">
        <SwitchPreference
            app:key="sUoT"
            app:summary="@string/udp_over_tcp_summary"
            app:title="@string/udp_over_tcp" />
    </PreferenceCategory>
</PreferenceScreen>
