<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_note_add"
        android:title="@string/add_profile"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_scan_qr_code"
                android:title="@string/add_profile_methods_scan_qr_code" />
            <item
                android:id="@+id/action_import_clipboard"
                android:title="@string/action_import" />
            <item
                android:id="@+id/action_import_subscription"
                android:title="@string/import_subscription_link" />
        </menu>
    </item>

    <item
        android:id="@+id/action_update_subscription"
        android:title="@string/update_current_subscription"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_manage_groups"
        android:title="@string/manage_groups"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_node_speed_test"
        android:title="@string/connection_test_node_speed"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_connection_test_clear_results"
        android:title="@string/connection_test_clear_results"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_connection_test_delete_unavailable"
        android:title="@string/connection_test_delete_unavailable"
        app:showAsAction="never" />
</menu>
