<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_note_add"
        android:title="@string/add_profile"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_scan_qr_code"
                android:title="@string/add_profile_methods_scan_qr_code" />
            <item
                android:id="@+id/action_import_clipboard"
                android:title="@string/action_import" />
            <item
                android:id="@+id/action_import_subscription"
                android:title="@string/import_subscription_link" />
        </menu>
    </item>
    <item
        android:id="@+id/action_update_all"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/update_all_subscription"
        app:showAsAction="ifRoom" />
</menu>
